src/objects/peer__Admin_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>peer__Allow_Rebid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the Investor to Rebid on the Loan Application they already Bid on.</description>
        <inlineHelpText>Check this to allow the Investor to rebid on the existing loan application</inlineHelpText>
        <label>Allow Rebid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Almost_Threshold__c</fullName>
        <label>Almost Threshold</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Auction_Duration__c</fullName>
        <description>Provide the number of Days for which the Loan Application will be valid</description>
        <inlineHelpText>This is the number of days for which the loan application will be valid</inlineHelpText>
        <label>Auction Duration</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Automatic_Weights_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Portfolio Builder should use automatic weights method</description>
        <inlineHelpText>Check this if Portfolio Builder should use the Automatic Weights Method</inlineHelpText>
        <label>Automatic Weights Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Diff_Interest_Value__c</fullName>
        <description>The value by which he interest rate can be lower in case of fully funded Loan Applications.</description>
        <inlineHelpText>This is the value by which the interest rate can be lower in case of fully funded loan applications</inlineHelpText>
        <label>Diff Interest Value</label>
        <precision>5</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Funding_Percentage_Threshold__c</fullName>
        <inlineHelpText>This is the threshold at which a loan becomes funded at the end of an auction</inlineHelpText>
        <label>Funding Percentage Threshold</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Max_Investors_Per_Loan_App__c</fullName>
        <inlineHelpText>This is the maximum number of investors per loan application</inlineHelpText>
        <label>Max Investors Per Loan App</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Maximum_Bid_Percentage__c</fullName>
        <description>Maximum Bid Percentage Out of the total Portfolio</description>
        <inlineHelpText>This is the maximum bid percentage of the total Portfolio</inlineHelpText>
        <label>Maximum Bid Percentage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Maximum_Flexiblity__c</fullName>
        <label>Maximum Flexiblity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__Maximum_Interest_Rate__c</fullName>
        <inlineHelpText>This is the maximum interest rate required while creating a loan application</inlineHelpText>
        <label>Maximum Interest Rate</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Minimum_Amount_For_Investment__c</fullName>
        <description>The minimum Amount required to create a Portfolio</description>
        <inlineHelpText>This is the minimum amount that must be invested in order to create a Portfolio</inlineHelpText>
        <label>Minimum Amount For Investment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Minimum_Funding_Percentage__c</fullName>
        <description>Minimum funding percent of a Loan Request that allows the borrower to receive the current funds</description>
        <inlineHelpText>This is the minimum funding percentage of a loan request that allows the borrower to receive the current funds</inlineHelpText>
        <label>Minimum Funding Percentage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>peer__PortfolioBuilder__c</fullName>
        <description>Portfolio builder class which should implement IPortfolioBuilder.</description>
        <inlineHelpText>Portfolio builder class which should implement IPortfolioBuilder.</inlineHelpText>
        <label>PortfolioBuilder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generation_Count_Per_Day__c</fullName>
        <description>The number of times the portfolio can be build a day</description>
        <inlineHelpText>This is the number of times a portfolio can be built in a day</inlineHelpText>
        <label>Portfolio Generation Count Per Day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Generation_Count_Per_Hour__c</fullName>
        <description>The number of times portfolio can be build an hour</description>
        <inlineHelpText>This is the number of times a portfolio can be built in an hour</inlineHelpText>
        <label>Portfolio Generation Count Per Hour</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__Portfolio_Valid_Time__c</fullName>
        <description>During this time the lender can choose to accept the portfolio offer,committing it and having its bids placed</description>
        <inlineHelpText>This is the time during which the portfolio remains valid. Here, provide the value in seconds for which the portfolio must remain valid</inlineHelpText>
        <label>Portfolio Valid Time</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Auto Portfolio Admin Params</label>
</CustomObject>